--- a/wedding.html
+++ b/wedding.html
@@ -11,20 +11,32 @@
     <div class="grid_12">
       <ul class="top-nav">
         <li><a href="#">about us</a></li>
+        <li>:</li>
         <li><a href="#">advertise with us</a></li>
+        <li>:</li>
         <li><a href="#">vendor login</a></li>
+        <li>:</li>
         <li><a href="#">submit</a></li>
       </ul>
     </div>
-    <div class="grid_8">
+    <div class="header grid_12">
+    <div class="wedding-image grid_8">
       <h1>
-        <a href="#"><img src="logo.jpg"></a>
+        <a href="#"><img src="logo.jpg" ></a>
       <h1>
     </div>
-    <div class="grid_4">
+    <div class="connect grid_4">
       <h2>Connect With Us</h2>
-
+      <div class="social-ribbon">
+        <ul>
+          <li><a href="#"><img src="facebook.png"></a></li>
+          <li><a href="#"><img src="twitter.png"></a></li>
+          <li><a href="#"><img src="rss.png"></a></li>
+          <li><a href="#"><img src="mail.png"></a></li>
+        </ul>
+      </div>
     </div>
-  </div> 
+    </div>
+  </div>
 </body>
 </html>
