--- a/wedding.html
+++ b/wedding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container_12">
-    <div class="grid_12">
+    <div class="top-nav grid_12">
       <ul class="top-nav">
         <li><a href="#">about us</a></li>
         <li>:</li>
@@ -18,25 +18,44 @@
         <li>:</li>
         <li><a href="#">submit</a></li>
       </ul>
+      <div class="clear"></div>
     </div>
     <div class="header grid_12">
-    <div class="wedding-image grid_8">
-      <h1>
-        <a href="#"><img src="logo.jpg" ></a>
-      <h1>
-    </div>
-    <div class="connect grid_4">
-      <h2>Connect With Us</h2>
-      <div class="social-ribbon">
-        <ul>
-          <li><a href="#"><img src="facebook.png"></a></li>
-          <li><a href="#"><img src="twitter.png"></a></li>
-          <li><a href="#"><img src="rss.png"></a></li>
-          <li><a href="#"><img src="mail.png"></a></li>
-        </ul>
+      <div class="logo grid_8">
+        <h1>
+          <a href="#"><img src="logo.jpg" ></a>
+        <h1>
+      </div>
+      <div class="connect grid_4">
+        <h2>Connect With Us</h2>
+        <div class="social-ribbon">
+          <ul>
+            <li><a href="#"><img src="facebook.png"></a></li>
+            <li><a href="#"><img src="twitter.png"></a></li>
+            <li><a href="#"><img src="rss.png"></a></li>
+            <li><a href="#"><img src="mail.png"></a></li>
+          </ul>
+        </div>
       </div>
     </div>
+    <div class="menu grid_12">
+      <img class="menu-left" src="left-menu.png">
+      <ul class="menu-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Real Weddings</a></li>
+        <li><a href="#">Vendor Guide</a></li>
+        <li><a href="#">DIY Projects</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact Us</a></li>
+      <ul>
+      <img class="menu-right" src="right-menu.png">
     </div>
+    <div class="clear"></div>
+    <div class="grid_12">
+      
+    </div>
+
   </div>
 </body>
 </html>
