--- a/wedding.html
+++ b/wedding.html
@@ -41,20 +41,115 @@
     <div class="menu grid_12">
       <img class="menu-left" src="left-menu.png">
       <ul class="menu-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Real Weddings</a></li>
-        <li><a href="#">Vendor Guide</a></li>
-        <li><a href="#">DIY Projects</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact Us</a></li>
-      <ul>
-      <img class="menu-right" src="right-menu.png">
+        <a href="#"><li>Home</li></a>
+        <a href="#"><li>Blog</li></a>
+        <a href="#"><li>Real Weddings</li></a>
+        <a href="#"><li>Vendor Guide</li></a>
+        <a href="#"><li>DIY Projects</li></a>
+        <a href="#"><li>Portfolio</li></a>
+        <a href="#"><li>Contact Us</li></a>
+      </ul>
+      <div>
+        <img class="menu-right" src="right-menu.png">
+      </div>
     </div>
     <div class="clear"></div>
+<!--blog posts-->
     <div class="grid_12">
-      
+      <div class="grid_8">
+        <div>
+          <img src="carousel.jpg">
+        </div>
+        <div>
+          <img src="post-divider.jpg">
+        </div>
+        <h3>Jenning's and Joyer Wedding</h3>
+        <div>
+          <sub>June 22, By Charlotte Hansen in Weddings, Photography, Features</sub>
+        </div>  
+        <div>
+          <img src="post-divider.jpg">
+        </div>
+      </div>
+  <!--sidebar-->
+      <div class="grid_4">
+        <input class="search" type="text" value="search">
+        <h2>Get Our News Letter</h2>
+        <div>
+          Get our free monthly newsletter packed with events, ideas and more.
+        </div>
+        <div>
+          <input type="text" value="email address">
+        </div>
+        <div>
+          <button type="submit">submit</submit>
+        </div>
+      </div>
     </div>
+    <footer class="grid_12">
+      <div class="dotted-1 grid_12">
+        .............................................
+      </div>
+      <div class="dotted-2 grid_12">
+        .............................................
+      </div>
+      <div class="grid_5">
+        <h2>Text Widget</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin imperdiet, felis sed cursus viverra, erat tellus sodales est, a iaculis metus ligula congue elit. 
+        </p>
+        <p>
+          Vivamus hendrerit tincidunt nisl, eget laoreet neque suscipit ut. Nunc adipiscing, nulla ac ornare scelerisque, arcu est lobortis risus, nec pellentesque felis dolor sed enim. 
+        </p>
+        <p>
+          > <a href="#">READ MORE</a>
+        </p>
+      </div>
+      <div class="grid_2">
+        <h2>Categories</h2>
+          <ul>
+          <li>Home</li>
+          <li>Blog</li>
+          <li>Real Weddings</li>
+          <li>Vendor Guide</li>
+          <li>DIY Projects</li>
+          <li>Portfolio</li>
+          <li>Contact Us</li>
+        </ul>
+      </div>
+      <div class="grid_2">
+        <h2>Main Menu</h2>
+        <ul>
+          <li>Home</li>
+          <li>Blog</li>
+          <li>Real Weddings</li>
+          <li>Vendor Guide</li>
+          <li>DIY Projects</li>
+          <li>Portfolio</li>
+          <li>Contact Us</li>
+        </ul>
+      </div>
+      <div class="grid_3">
+        <h2>Sponsered Links</h2>
+          <ul>
+            <li>www.stylemepretty.com</li>
+            <li>www.weddingcakes.com</li>
+            <li>www.prettyinpink.com</li>
+            <li>www.donebrilliantly.com</li>
+            <li>www.somesucka.com</li>
+            <li>www.weddingphotography.com</li>
+            <li>www.somelinkshere.com</li>
+          </ul>
+      </div>
+      <div class="dates grid_12">
+        <img src="footer-divider.jpg">
+        <p>2013: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
+        <p>2012: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
+        <p>2011: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
+        <p>2010: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
+        <img src="footer-divider.jpg">
+      </div>
+    </footer>
 
   </div>
 </body>
