container fix sidebar add

--- a/wedding.html
+++ b/wedding.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <div class="container_12">
-    <div class="top-nav grid_12">
-      <ul class="top-nav">
-        <li><a href="#">about us</a></li>
-        <li>:</li>
-        <li><a href="#">advertise with us</a></li>
-        <li>:</li>
-        <li><a href="#">vendor login</a></li>
-        <li>:</li>
-        <li><a href="#">submit</a></li>
-      </ul>
+    <div class="grid_12">
+        <ul class="top-nav">
+          <li><a href="#">about us</a></li>
+          <li>:</li>
+          <li><a href="#">advertise with us</a></li>
+          <li>:</li>
+          <li><a href="#">vendor login</a></li>
+          <li>:</li>
+          <li><a href="#">submit</a></li>
+        </ul>
       <div class="clear"></div>
     </div>
-    <div class="header grid_12">
+    <div class="grid_12 header">
       <div class="logo grid_8">
         <h1>
           <a href="#"><img src="logo.jpg" ></a>
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="menu grid_12">
+    <div class="menu menu-container">
       <img class="menu-left" src="left-menu.png">
       <ul class="menu-links">
         <a href="#"><li>Home</li></a>
@@ -73,25 +73,28 @@
       </div>
   <!--sidebar-->
       <div class="grid_4">
-        <input class="search" type="text" value="search">
-        <h2>Get Our News Letter</h2>
-        <div>
-          Get our free monthly newsletter packed with events, ideas and more.
-        </div>
-        <div>
-          <input type="text" value="email address">
-        </div>
-        <div>
-          <button type="submit">submit</submit>
+        <input class="light-border left search" type="text" value="search">
+        <input class="search-button left" type="image" src="search.png" value="search">
+        <div class="news-letter-container"> 
+          <h2 class="news-letter"><div class="white">Get Our News Letter</div></h2>
+          <div>
+            Get our free monthly newsletter packed with events, ideas and more.
+          </div>
+          <div>
+            <input class="light-border email" type="text" value="email address">
+          </div>
+          <div class="right">
+            <button type="submit">submit</button>
+          </div>
         </div>
       </div>
     </div>
     <footer class="grid_12">
-      <div class="dotted-1 grid_12">
-        .............................................
+      <div class="dotted-1">
+        ............................................
       </div>
-      <div class="dotted-2 grid_12">
-        .............................................
+      <div class="dotted-2">
+        ............................................
       </div>
       <div class="grid_5">
         <h2>Text Widget</h2>
@@ -129,7 +132,7 @@
           <li>Contact Us</li>
         </ul>
       </div>
-      <div class="grid_3">
+      <div class="grid_2">
         <h2>Sponsered Links</h2>
           <ul>
             <li>www.stylemepretty.com</li>
@@ -141,7 +144,7 @@
             <li>www.somelinkshere.com</li>
           </ul>
       </div>
-      <div class="dates grid_12">
+      <div class="dates">
         <img src="footer-divider.jpg">
         <p>2013: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
         <p>2012: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
@@ -149,6 +152,7 @@
         <p>2010: Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</p>
         <img src="footer-divider.jpg">
       </div>
+
     </footer>
 
   </div>
