news letter box formatted

--- a/wedding.html
+++ b/wedding.html
@@ -111,31 +111,33 @@
         <input class="light-border left search" type="text" value="search">
         <input class="search-button left" type="image" src="search.png" value="search">
         <div class="news-letter"> 
-          <h2><div class="white">Get Our News Letter</div></h2>
+          <h2><span class="white">Get Our News Letter</span></h2>
           <div>
             Get our free monthly newsletter packed with events, ideas and more.
           </div>
           <div>
             <input class="light-border email" type="text" value="email address">
           </div>
-            <input class="submit right" type="submit" value="submit">
+          <div class="right">
+            <input class="submit" type="submit" value="submit">
+          </div>
         </div>
 <!--ads-->
         <div>
           <img src="ad-medium.jpg">
         </div>
-        <div>
+        <div class="ad-small">
           <img src="ad-small4.jpg">
-          <img src="ad-small3.jpg">
+          <img class="margin-40" src="ad-small3.jpg">
         </div>
-        <div>
+        <div class="ad-small">
           <img src="ad-small2.jpg">
-          <img src="ad-small1.jpg">
+          <img class="margin-40" src="ad-small1.jpg">
         </div>
         <div>
           <img src="ad-large.jpg">
         </div>
-        <h2>Our Favorites</h2>
+        <h3>Our Favorites</h3>
         <div>
           <img src="favorites.jpg">
           <a href="#"><h4>Flowers and More Flowers Magnust Etact</h4></a>
@@ -168,7 +170,7 @@
           </p>
           <span>----</span>
         </div>
-        <h2>Tags</h2>
+        <h3>Tags</h3>
         <ul>
           <li><strong><a href="#">Weddings</a></strong></li>
           <li><a href="#">Bride</a></li>
@@ -176,7 +178,7 @@
           <li><a href="#">Engagement</a></li>
           <li><a href="#"><strong>Banquet</strong></a></li>
         </ul>
-        <h2>Categories</h2>
+        <h3>Categories</h3>
         <ul>
           <a href="#"><li><img src="bullet-bell.jpg">Bridal Fashion</li></a> 
           <a href="#"><li><img src="bullet-bell.jpg">Photograpy</li></a> 
@@ -184,7 +186,7 @@
           <a href="#"><li><img src="bullet-bell.jpg">Florals and Decor</li></a> 
           <a href="#"><li><img src="bullet-bell.jpg">For the Groom and His Men</li></a> 
         </ul>
-        <h2>Archives</h2>
+        <h3>Archives</h3>
         <ul>
           <a href="#"><li><img src="bullet-bell.jpg">July 2011</li></a> 
           <a href="#"><li><img src="bullet-bell.jpg">June 2011</li></a> 
