bottom sidebar, layout edits

--- a/wedding.html
+++ b/wedding.html
@@ -22,12 +22,12 @@
       <div class="clear"></div>
     </div>
     <div class="grid_12 header">
-      <div class="logo grid_8">
+      <div class="logo">
         <h1>
           <a href="#"><img src="logo.jpg" ></a>
         <h1>
       </div>
-      <div class="connect grid_4">
+      <div class="connect grid_4"ß>
         <h2>Connect With Us</h2>
         <div class="social-ribbon">
           <ul>
@@ -123,77 +123,103 @@
           </div>
         </div>
 <!--ads-->
-        <div>
-          <img src="ad-medium.jpg">
+        <div class="sidebar-content">
+          <div>
+            <img src="ad-medium.jpg">
+          </div>
+          <div class="ad-small">
+            <img src="ad-small4.jpg">
+            <img class="margin-50" src="ad-small3.jpg">
+          </div>
+          <div class="ad-small">
+            <img src="ad-small2.jpg">
+            <img class="margin-50" src="ad-small1.jpg">
+          </div>
+          <div class="ad-large">
+            <img src="ad-large.jpg">
+          </div>
+          <div class="clear"></div>
+          <div class="favorites">
+            <h3><span>Our Favorites</span></h3>
+            <div>
+              <img src="favorites.jpg">
+              <div class="favorites-p">
+                <a href="#">Flowers and More Flowers Magnust Etact</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
+                </p>
+              </div>
+              <div class="clear"></div>
+              <div class="line"></div>
+            </div>
+            <div>
+              <img src="favorites2.jpg">
+              <div class="favorites-p">
+                <a href="#">Flowers and More Flowers Magnust Etact</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
+                </p>
+              </div>
+              <div class="clear"></div>              
+              <div class="line"></div>
+            </div>
+            <div>
+              <img src="favorites3.jpg">
+              <div class="favorites-p">
+                <a href="#">Flowers and More Flowers Magnust Etact</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
+                </p>
+              </div>
+              <div class="clear"></div>
+              <div class="line"></div>
+            </div>
+            <div>
+              <img src="favorites4.jpg">              
+              <div class="favorites-p">
+                <a href="#">Flowers and More Flowers Magnust Etact</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
+                </p>
+              </div>
+              <div class="clear"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="sidebar-links">
+            <h3><span>Tags</span></h3>
+            <ul>
+              <li class="tags"><a href="#"><strong>Weddings</strong></a></li>
+              <li class="tags"><a href="#"><sub>Bride</sub></a></li>
+              <li class="tags"><a href="#"><sub>Groom</sub></a></li>
+              <li class="tags"><a href="#">Engagement</a></li>
+              <li class="tags"><a href="#"><strong>Banquet</strong></a></li>
+              <li class="tags"><a href="#"><sub>Bride</sub></a></li>
+              <li class="tags"><a href="#">Wedding Cake</a></li>
+              <li class="tags"><a href="#"><strong>Reception</strong></a></li>
+              <li class="tags"><a href="#"><strong>Vendor</strong></a></li>
+              <li class="tags"><a href="#"><sub>Ceremony</sub></a></li>
+              <li class="tags"><a href="#"><sub>Bridal Party</sub></a></li>              
+            </ul>
+            <div class="clear"></div>
+            <h3><span>Categories</span></h3>
+            <ul>
+              <a href="#"><li><img src="bullet-bell.jpg">Bridal Fashion</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">Photograpy</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">DIY Weddings</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">Florals and Decor</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">For the Groom and His Men</li></a> 
+            </ul>
+            <h3><span>Archives</span></h3>
+            <ul>
+              <a href="#"><li><img src="bullet-bell.jpg">July 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">June 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">May 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">April 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.jpg">March 2011</li></a> 
+            </ul>
+          </div>
         </div>
-        <div class="ad-small">
-          <img src="ad-small4.jpg">
-          <img class="margin-40" src="ad-small3.jpg">
-        </div>
-        <div class="ad-small">
-          <img src="ad-small2.jpg">
-          <img class="margin-40" src="ad-small1.jpg">
-        </div>
-        <div>
-          <img src="ad-large.jpg">
-        </div>
-        <h3>Our Favorites</h3>
-        <div>
-          <img src="favorites.jpg">
-          <a href="#"><h4>Flowers and More Flowers Magnust Etact</h4></a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
-          </p>
-          <span>----</span>
-        </div>
-        <div>
-          <img src="favorites2.jpg">
-          <a href="#"><h4>Flowers and More Flowers Magnust Etact</h4></a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
-          </p>
-          <span>----</span>
-        </div>
-        <div>
-          <img src="favorites3.jpg">
-          <a href="#"><h4>Flowers and More Flowers Magnust Etact</h4></a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
-          </p>
-          <span>----</span>
-        </div>
-        <div>
-          <img src="favorites4.jpg">
-          <a href="#"><h4>Flowers and More Flowers Magnust Etact</h4></a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a magna dolor.
-          </p>
-          <span>----</span>
-        </div>
-        <h3>Tags</h3>
-        <ul>
-          <li><strong><a href="#">Weddings</a></strong></li>
-          <li><a href="#">Bride</a></li>
-          <li><a href="#">Groom</a></li>
-          <li><a href="#">Engagement</a></li>
-          <li><a href="#"><strong>Banquet</strong></a></li>
-        </ul>
-        <h3>Categories</h3>
-        <ul>
-          <a href="#"><li><img src="bullet-bell.jpg">Bridal Fashion</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">Photograpy</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">DIY Weddings</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">Florals and Decor</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">For the Groom and His Men</li></a> 
-        </ul>
-        <h3>Archives</h3>
-        <ul>
-          <a href="#"><li><img src="bullet-bell.jpg">July 2011</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">June 2011</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">May 2011</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">April 2011</li></a> 
-          <a href="#"><li><img src="bullet-bell.jpg">March 2011</li></a> 
-        </ul>
       </div>
     </div>
     <footer class="grid_12">
