sidebar li hoover added

--- a/wedding.html
+++ b/wedding.html
@@ -203,20 +203,20 @@
             </ul>
             <div class="clear"></div>
             <h3><span>Categories</span></h3>
-            <ul>
-              <a href="#"><li><img src="bullet-bell.jpg">Bridal Fashion</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">Photograpy</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">DIY Weddings</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">Florals and Decor</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">For the Groom and His Men</li></a> 
+            <ul class="sidebar-hover">
+              <a href="#"><li><img src="bullet-bell.png">Bridal Fashion</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">Photograpy</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">DIY Weddings</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">Florals and Decor</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">For the Groom and His Men</li></a> 
             </ul>
             <h3><span>Archives</span></h3>
-            <ul>
-              <a href="#"><li><img src="bullet-bell.jpg">July 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">June 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">May 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">April 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.jpg">March 2011</li></a> 
+            <ul class="sidebar-hover">
+              <a href="#"><li><img src="bullet-bell.png">July 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">June 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">May 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">April 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">March 2011</li></a> 
             </ul>
           </div>
         </div>
