tint added to carousel thumbnails, dotted border

--- a/wedding.html
+++ b/wedding.html
@@ -61,8 +61,8 @@
           <img src="carousel.jpg">
         </div>
         <ul class="carousel-thumb">
-          <li><a href="#"><img src="carousel-thumb1.jpg"></a></li>
-          <li><a href="#"><img src="carousel-thumb2.jpg"></a></li>
+          <li class="tint"><a href="#"><img src="carousel-thumb1.jpg"></a></li>
+          <li class="tint"><a href="#"><img src="carousel-thumb2.jpg"></a></li>
           <li><a href="#"><img src="carousel-thumb3.jpg"></a></li>
           <li><a href="#"><img src="carousel-thumb4.jpg"></a></li>
           <li class="carousel-thumb5"><a href="#"><img src="carousel-thumb5.jpg"></a></li>
@@ -296,7 +296,9 @@
             </ul>
             <h3><span>Archives</span></h3>
             <ul class="sidebar-hover">
-              <a href="#"><li><img src="bullet-bell.png">July 2011</li></a> 
+              <a href="#"><li><im
+
+                g src="bullet-bell.png">July 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">June 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">May 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">April 2011</li></a> 
@@ -307,9 +309,52 @@
       </div>
     </div>
     <footer class="grid_12">
-      <div class="dotted">
-        <img src="dotted-footer.png">
-      </div>
+      <ul class="grid_12 dotted">
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+        <li><img src="dots.png"></li>
+      </ul>
+      <div class="clear"></div>
       <div class="grid_5">
         <h2>Text Widget</h2>
         <div class="clear"></div>
