--- a/wedding.html
+++ b/wedding.html
@@ -296,9 +296,7 @@
             </ul>
             <h3><span>Archives</span></h3>
             <ul class="sidebar-hover">
-              <a href="#"><li><im
-
-                g src="bullet-bell.png">July 2011</li></a> 
+              <a href="#"><li><img src="bullet-bell.png">July 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">June 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">May 2011</li></a> 
               <a href="#"><li><img src="bullet-bell.png">April 2011</li></a> 
