bullet bell changes and responsive divider

--- a/wedding.html
+++ b/wedding.html
@@ -288,19 +288,19 @@
             <div class="clear"></div>
             <h3><span>Categories</span></h3>
             <ul class="sidebar-hover">
-              <a href="#"><li><img src="bullet-bell.png">Bridal Fashion</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">Photograpy</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">DIY Weddings</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">Florals and Decor</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">For the Groom and His Men</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>Bridal Fashion</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>Photograpy</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>DIY Weddings</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>Florals and Decor</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>For the Groom and His Men</li></a> 
             </ul>
             <h3><span>Archives</span></h3>
             <ul class="sidebar-hover">
-              <a href="#"><li><img src="bullet-bell.png">July 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">June 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">May 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">April 2011</li></a> 
-              <a href="#"><li><img src="bullet-bell.png">March 2011</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>July 2011</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>June 2011</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>May 2011</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>April 2011</li></a> 
+              <a href="#"><li><div class="bullet-bell"></div>March 2011</li></a> 
             </ul>
           </div>
         </div>
